@@ -19,6 +19,7 @@ in v0.9.1).
 
 Version 2.0.4 (also included in 1.11.13 when appropriate)
 -------------
+* Add support for Linux 5.3 new sysfs cpu topology files.
 * Add support for Intel v2 Extended Topology Enumeration in the x86 backend.
   Tiles, Modules and Dies are exposed as Groups for now.
   + HWLOC_DONT_MERGE_DIE_GROUPS=1 may be set in the environment to prevent
